--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
-theme: jekyll-theme-time-machine
+theme: jekyll-theme-architect
+title: [APIKGSumm Replication Package]
+description: [the replication package for APIKGSumm]
