--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-architect
 title: [APIKGSumm Replication Package]
 description: [the replication package for APIKGSumm]
+show_downloads: ["false"]
