--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,5 @@ theme: jekyll-theme-architect
 title: [APIKGSumm Replication Package]
 description: [the replication package for APIKGSumm]
 show_downloads: "false"
+is_user_page: "false"
 github.is_user_page: "false"
